--- a/app/base_static/global/css/styles.css
+++ b/app/base_static/global/css/styles.css
@@ -159,8 +159,7 @@ main {
 }
 
 .post img {
-    width: 90%;
-    max-width: 800px;
+    max-width: 100%;
 }
 
 .post-header, .post-detail {
@@ -215,6 +214,16 @@ main {
     background-color: rgb(255, 0, 98);
     color: #fff;
     border: 1px solid rgb(255, 0, 98);
+}
+
+.delete-button {
+    background-color: #dc3545;
+    color: #fff;
+    border: 1px solid #dc3545;
+    padding: 5px 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    border-radius: 5px;
 }
 
 .comments {
