--- a/app/base_templates/global/partials/search.html
+++ b/app/base_templates/global/partials/search.html
@@ -1,6 +1,7 @@
+{% load i18n %}
 <div class="search-container">
     <form action="{% url "publications:search" %}" method="get">
-        <input type="search" name="q" placeholder="search something here..." class="search-input" required>
+        <input type="search" name="q" placeholder="{%translate "search something here... "%}" class="search-input" required>
         <button type="submit" class="search-button"><i class="material-symbols-outlined">search</i></button>
     </form>
 </div>
