--- a/app/publications/templates/publications/pages/home.html
+++ b/app/publications/templates/publications/pages/home.html
@@ -1,17 +1,18 @@
 {% extends "global/base.html" %}
+{% load i18n %}
 {% block content %}
 <main>
     {% include "global/partials/messages.html" %}
     {% if page_obj %}
     <section class="posts">
-        <h2>Lastest posts</h2>
+        <h2>{% trans "Lastest posts" %}</h2>
         {% for publication in page_obj %}
             {% include "global/partials/publication.html" %}
         {% endfor %}
     </section>
     {% include "global/partials/pagination.html" %}
     {% else %}
-        <h2>It looks like there's nothing around here...</h2>
+        <h2> {% translate "It looks like there's nothing around here..." %}</h2>
     {% endif %}
 </main>
 {% endblock content %}
