--- a/app/publications/templates/publications/pages/publication-detail.html
+++ b/app/publications/templates/publications/pages/publication-detail.html
@@ -1,19 +1,20 @@
 {% extends "global/base.html" %}
+{% load i18n %}
 {% block content %}
 <main>
     {% include "global/partials/publication.html" %}
     <div class="comment-form">
         <form method="post" action="{% url "publications:comment" publication.id %}">
             {% csrf_token %}
-            <textarea name="text" placeholder="Add a comment here..." required></textarea>
-            <button type="submit">Comment</button>
+            <textarea name="text" placeholder="{% translate "Add a comment here..." %}" required></textarea>
+            <button type="submit">{% translate "Comment" %}</button>
         </form>
     </div>
     <section class="comments">
     {% if comments %}
-        <h2>Comments</h2>
+        <h2>{% translate "Comments" %}</h2>
     {% else %}
-        <h2>No comments yet</h2>
+        <h2>{% translate "No comments yet" %}</h2>
     {% endif %}
     <div id='comments-list'>
         {% for comment in comments %}
@@ -29,14 +30,14 @@
                     <a href="{% url "profiles:profile" comment.author.username %}" class="post-profile-user-link">
                         <span>@{{ comment.author.username }}</span>
                     </a>
-                    <small>{{ comment.created_at|timesince }} atrás</small>
+                    <small>{{ comment.created_at|timesince }} {% translate "ago" %}</small>
                 </div>
                 <div><p>{{ comment.text }}</p></div>
             </div>
         {% endfor %}
     </div>
     {% if comments.has_next %}
-        <div class="view-more"><button class="view-more-comments" id="view-more-comments" data-next-page="{{comments.next_page_number}}">View  more</button></div>
+        <div class="view-more"><button class="view-more-comments" id="view-more-comments" data-next-page="{{comments.next_page_number}}">{% translate "View  more" %}</button></div>
     {% endif %}
     </section>
         
