--- a/app/base_templates/global/partials/navrail.html
+++ b/app/base_templates/global/partials/navrail.html
@@ -1,8 +1,9 @@
 {% load i18n %}
 <div class="navrail">
     <ul>
-        <li><a href="{% url 'publications:home' %}">{% translate "Home" %}</a></li>
         {% if user.is_authenticated %}
+            <li><a href="{% url 'publications:home' %}">{% translate "Home" %}</a></li>
+            <li><a href="{% url 'notifications' %}">{% translate "Notifications" %}</a></li>
             <li><a href="{% url "profiles:profile" request.user.username %}">{% translate "Profile" %}</a></li>
             <li><a href="{% url "authors:edit_author" %}">{% translate "Edit Profile" %} </a></li>
             <li><a href="{% url "authors:logout" %}" onclick="return confirm('Are you sure?')">{% translate "Logout" %}</a></li>
