--- a/app/profiles/templates/profiles/profile_detail.html
+++ b/app/profiles/templates/profiles/profile_detail.html
@@ -1,4 +1,5 @@
 {% extends "global/base.html" %}
+{% load static %}
 {% load i18n %}
 {% block content %}
     <main>
@@ -8,7 +9,7 @@
                     {% if profile.picture %}
                     <img src="{{ profile.picture.url }}" alt="Foto de {{ profile.user.username }}" class="profile-picture">
                     {% else %}
-                        <img src="https://placehold.co/150x150/" alt="" class="profile-picture">
+                        <img src="{% static "global/img/profile-without-picture.png" %}" alt="" class="profile-picture">
                     {% endif %}
                     <h1 class="profile-username">@{{ profile.user.username }}</h1>
                     <h2 class="profile-fullname">{{ profile.user.first_name }} {{ profile.user.last_name }}</h2>
