--- a/app/publications/templates/publications/pages/publication-detail.html
+++ b/app/publications/templates/publications/pages/publication-detail.html
@@ -1,4 +1,5 @@
 {% extends "global/base.html" %}
+{% load static %}
 {% load i18n %}
 {% block content %}
 <main>
@@ -24,7 +25,7 @@
                         {% if comment.author.profile.picture %}
                             <img src="{{ comment.author.profile.picture.url }}" alt="Profile picture">
                         {% else %}
-                            <img src="https://placehold.co/40x40" alt="">
+                            <img src="{% static "global/img/profile-without-picture.png" %}" alt="">
                         {% endif %}
                     </a>
                     <a href="{% url "profiles:profile" comment.author.username %}" class="post-profile-user-link">
