Create the 'Configs' app to manage user settings, including profile editing and settings page. Removes the author's 'Authors' application editing form and updates the corresponding URLs and templates.

--- a/app/base_templates/global/partials/header.html
+++ b/app/base_templates/global/partials/header.html
@@ -21,8 +21,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="{% url 'authors:edit_author' %}">
-                        <i class="material-symbols-outlined">manage_accounts</i>
+                    <a href="{% url 'configs:configs' %}">
+                        <i class="material-symbols-outlined">settings</i>
                     </a>
                 </li>
                 <li>
