--- a/app/base_static/global/css/styles.css
+++ b/app/base_static/global/css/styles.css
@@ -287,6 +287,16 @@ main {
     color: #0056b3;
 }
 
+.container {
+    background: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    width: 100%;
+    margin: auto;
+}
+
 .form-card {
     background: #fff;
     padding: 30px;
@@ -364,6 +374,19 @@ main {
     object-fit: cover;
     margin-bottom: 15px;
     border: 3px solid #007bff;
+}
+
+.conf-option {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    border-bottom: 1px solid #ddd;
+    text-decoration: none;
+    color: #333;
+}
+.conf-option:hover{
+    background-color: #f0f0f0;
 }
 
 .messages {
@@ -551,9 +574,8 @@ main {
 .notification-item {
     padding: 15px;
     margin-bottom: 10px;
-    background-color: #f9f9f9;
+    background-color: #75acff5b;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: space-between;
     align-items: center;
