--- a/app/configs/templates/configs/pages/configs.html
+++ b/app/configs/templates/configs/pages/configs.html
@@ -8,9 +8,9 @@
             <p>{% trans "Edit Profile" %}</p>
         </div>
     </a>
-    <a href="#" class="conf-option">
+    <a href="{% url "authors:logout" %}" class="conf-option">
         <div>
-            <p>Privacy Policy</p>
+            <p>Sair</p>
         </div>
     </a>
 </div>
