update translation logout bottom

--- a/app/configs/templates/configs/pages/configs.html
+++ b/app/configs/templates/configs/pages/configs.html
@@ -10,7 +10,7 @@
     </a>
     <a href="{% url "authors:logout" %}" class="conf-option">
         <div>
-            <p>Sair</p>
+            <p>{% trans "Logout" %}</p>
         </div>
     </a>
 </div>
