--- a/app/base_templates/global/partials/header.html
+++ b/app/base_templates/global/partials/header.html
@@ -13,6 +13,7 @@
                 <li>
                     <a href="{% url 'notifications' %}">
                         <i class="material-symbols-outlined">notifications</i>
+                        <span class="notif-indicator" id="notif-indicator">●</span>
                     </a>
                 </li>
                 <li>
