--- a/app/base_templates/global/partials/navrail.html
+++ b/app/base_templates/global/partials/navrail.html
@@ -3,7 +3,12 @@
     <ul>
         {% if user.is_authenticated %}
             <li><a href="{% url 'publications:home' %}">{% translate "Home" %}</a></li>
-            <li><a href="{% url 'notifications' %}">{% translate "Notifications" %}</a></li>
+            <li>
+                <a href="{% url 'notifications' %}">
+                    {% translate "Notifications" %}
+                    <span class="notif-indicator" id="notif-indicator">●</span>
+                </a>
+            </li>
             <li><a href="{% url "profiles:profile" request.user.username %}">{% translate "Profile" %}</a></li>
             <li><a href="{% url "configs:configs" %}">{% translate "Settings" %} </a></li>
             <li><a href="{% url "authors:logout" %}" onclick="return confirm('Are you sure?')">{% translate "Logout" %}</a></li>
